--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/google-fonts": "^3.1.3",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
@@ -21,6 +22,11 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.0",
+    "maska": "^2.1.11",
     "sass": "^1.69.0"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
