--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "garibaldi-pharmacy",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@nuxt/devtools": "^1.0.6",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/seo": "^2.0.0-rc.8",
+    "@nuxtjs/sitemap": "^5.1.0",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.4",
     "nuxt-headlessui": "^1.1.5",
