--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
+    "@nuxtjs/recaptcha": "^1.1.2",
     "maska": "^2.1.11",
     "sass": "^1.69.0"
   },
