--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
     "maska": "^2.1.11",
-    "sass": "^1.69.0"
+    "sass": "^1.69.0",
+    "tailwind-hamburgers": "^1.3.5"
   },
   "resolutions": {
     "jackspeak": "2.1.1"
